--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<!-- Copyright © 2020 Sheodd -->
 <link rel="stylesheet" type="text/css" href="interface.css">
 </head>
 <body onload='Load()'>
